--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ add_executable(RayTracer    ${CMAKE_SOURCE_DIR}/src/main.cpp
                             ${CMAKE_SOURCE_DIR}/src/stb.cpp
                             ${CMAKE_SOURCE_DIR}/src/scene.cpp
                             ${CMAKE_SOURCE_DIR}/src/model.cpp
-                            ${CMAKE_SOURCE_DIR}/src/error.cpp)
+                            ${CMAKE_SOURCE_DIR}/src/error.cpp
+                            ${CMAKE_SOURCE_DIR}/src/skybox.cpp)
 
 
 if(NOT GLEW_LIBRARIES)
